force-app/main/default/objects/Exception_Logger__c/Exception_Logger__c.object-meta.xml
<CustomObject>
    <description>Object used to capture exceptions and API callout failures.</description>
    <label>Exception Logger</label>
    <nameField>
        <displayFormat>ERR-{000000}</displayFormat>
        <label>Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>