force-app/main/default/objects/Exception_Logger__c/fields/DFD_X_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>DFD_X_Request_Id__c</fullName>
    <label>X-Request-Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>