force-app/main/default/objects/Exception_Logger__c/fields/Exception_Cause__c.field-meta.xml
<CustomField>
    <fullName>Exception_Cause__c</fullName>
    <label>Exception Cause</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>