force-app/main/default/objects/Exception_Logger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>Exception_Cause__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Exception_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>