force-app/main/default/objects/Exception_Logger__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Exception_Cause__c</columns>
    <columns>Method_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exception_Type__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>